# lossratio

./: .Rbuildignore  .gitignore  .readthedocs.yaml  404.html  CHANGELOG.md  DESCRIPTION  LICENSE  LICENSE.html  NAMESPACE  NEWS.md  README.ko.html  README.ko.md  README.md  _pkgdown.ko.yml  _pkgdown.yml  authors.html  extra.js  index.html  index.md  llms.txt  pkgdown.yml  pyproject.toml  search.json  sitemap.xml
.github/workflows/: pkgdown.yaml  publish.yml  test.yml
R/: ata-vis.R  ata.R  backtest-vis.R  backtest.R  chain_ladder.R  cl-vis.R  cl.R  data-experience.R  ed-vis.R  ed.R  errors.R  experience.R  lossratio-package.R  lr-vis.R  lr.R  notation.R  plot.R  regime-vis.R  regime.R  tail.R  triangle-vis.R  triangle.R  utils-ggshort.R  utils-instead.R  utils.R  weights.R
articles/: aggregation-frameworks-ko.html  aggregation-frameworks-ko.md  aggregation-frameworks.html  aggregation-frameworks.md  backtest-ko.html  backtest-ko.md  backtest.html  backtest.md  chain-ladder-ko.html  chain-ladder-ko.md  chain-ladder.html  chain-ladder.md  getting-started-ko.html  getting-started-ko.md  getting-started.html  getting-started.md  index.html  index.md  loss-ratio-methods-ko.html  loss-ratio-methods-ko.md  loss-ratio-methods.html  loss-ratio-methods.md  regime-detection-ko.html  regime-detection-ko.md  regime-detection.html  regime-detection.md  triangle-diagnostics-ko.html  triangle-diagnostics-ko.md  triangle-diagnostics.html  triangle-diagnostics.md
articles/articles/: aggregation-frameworks-ko.html  backtest-ko.html  chain-ladder-ko.html  getting-started-ko.html  loss-ratio-methods-ko.html  regime-detection-ko.html  triangle-diagnostics-ko.html
data/: experience.rda
data-raw/: make_experience.R  make_logo.R
docs/: api.rst  conf.py  getting-started.md  index.md  start.md
docs/_static/: custom.css  external-links.js
docs/_templates/: layout.html  navbar-logo.html
docs/cookbook/: covariates.md  grain-stability.md  projection-mechanics.md  uncertainty-methods.md
docs/tutorial/: 01-triangle.md  02-ata.md  02-projection.md  03-intensity.md  04-projection.md  05-uncertainty.md  06-regime.md  07-backtest.md  08-convergence.md  08-stability.md  09-covariates.md  index.md
examples/: experience.parquet  experience_sample.csv  experience_sample.feather  experience_sample.xlsx
ko/: 404.html  LICENSE.html  README.ko.html  README.ko.md  authors.html  authors.md  extra.css  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
ko/articles/: aggregation-frameworks-ko.html  aggregation-frameworks-ko.md  aggregation-frameworks.html  aggregation-frameworks.md  backtest-ko.html  backtest-ko.md  backtest.html  backtest.md  chain-ladder-ko.html  chain-ladder-ko.md  chain-ladder.html  chain-ladder.md  getting-started-ko.html  getting-started-ko.md  getting-started.html  getting-started.md  index.html  index.md  loss-ratio-methods-ko.html  loss-ratio-methods-ko.md  loss-ratio-methods.html  loss-ratio-methods.md  regime-detection-ko.html  regime-detection-ko.md  regime-detection.html  regime-detection.md  triangle-diagnostics-ko.html  triangle-diagnostics-ko.md  triangle-diagnostics.html  triangle-diagnostics.md
ko/news/: index.html  index.md
ko/reference/: add_experience_period.html  add_experience_period.md  as_experience.html  as_experience.md  backtest.html  backtest.md  build_ata.html  (+233 more)
man/: add_experience_period.Rd  as_experience.Rd  backtest.Rd  build_ata.Rd  build_calendar.Rd  build_ed.Rd  build_total.Rd  build_triangle.Rd  check_experience.Rd  detect_cohort_regime.Rd  dot-apply_recent_filter.Rd  dot-as_comma.Rd  dot-assert_class.Rd  dot-assert_length.Rd  dot-bootstrap_cohort.Rd  dot-capture_chr.Rd  dot-capture_names.Rd  dot-check_col_spec.Rd  dot-cl_proj.Rd  dot-cl_summary.Rd  dot-cl_tail_factor.Rd  dot-combined_facet_labeller.Rd  dot-compute_tail_factor.Rd  dot-element_axis_text.Rd  dot-element_grid.Rd  dot-element_ticks.Rd  dot-ensure_dt.Rd  dot-expand_grid.Rd  dot-expand_triangle_grid.Rd  dot-extrapolate_sigma_ata.Rd  dot-extrapolate_sigma_ed.Rd  dot-filter_ata.Rd  dot-filter_ed.Rd  dot-format_facet_col.Rd  dot-format_period.Rd  dot-format_period_safe.Rd  dot-get_amount_unit.Rd  dot-get_granularity.Rd  dot-get_period_type.Rd  dot-get_plot_meta.Rd  (+90 more)
news/: index.html  index.md
reference/: add_experience_period.html  as_experience.html  as_experience.md  backtest.html  backtest.md  build_ata.html  build_ata.md  build_calendar.html  build_calendar.md  build_ed.html  build_ed.md  build_total.html  build_total.md  build_triangle.html  build_triangle.md  check_experience.html  check_experience.md  detect_cohort_regime.html  detect_cohort_regime.md  dot-apply_recent_filter.html  dot-apply_recent_filter.md  dot-as_comma.html  dot-assert_class.html  dot-assert_class.md  dot-assert_length.html  dot-assert_length.md  dot-bootstrap_cohort.html  dot-bootstrap_cohort.md  dot-capture_chr.html  dot-capture_names.html  dot-check_col_spec.html  dot-cl_proj.html  dot-cl_summary.html  dot-cl_summary.md  dot-cl_tail_factor.html  dot-combined_facet_labeller.html  dot-combined_facet_labeller.md  dot-compute_tail_factor.html  dot-element_axis_text.html  dot-element_grid.html  (+193 more)
tests/: conftest.py  test_at_grain.py  test_ata.py  test_backtest.py  test_balance.py  test_bf.py  test_bootstrap.py  test_borrow.py  test_calendar.py  test_cc.py  test_chain_ladder.py  test_cl.py  test_cl_tail.py  test_comparison.py  test_convergence.py  test_covariate.py  test_credible_loss.py  test_credible_premium.py  test_cs.py  test_curve.py  test_datasets.py  test_e_divisive.py  test_ed.py  test_empty_segment_guard.py  test_engine.py  test_engine_fast_parity.py  test_estimator_surface.py  test_experience.py  test_exposure_driven.py  test_fit_vis.py  test_gate.py  test_golden_master.py  test_groups.py  test_helpers.py  test_inception.py  test_intensity.py  test_invariants.py  test_link.py  test_link_ratio.py  test_lossratio.py  (+56 more)
vignettes/: aggregation-frameworks.Rmd  backtest.Rmd  chain-ladder.Rmd  getting-started.Rmd  loss-ratio-methods.Rmd  regime-detection.Rmd  triangle-diagnostics.Rmd
(+323 files in other folders)
