[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lossratio"
version = "0.0.1.dev10"
description = "Loss ratio analytics for long-term health insurance."
readme = "README.md"
license = "MPL-2.0"
license-files = ["LICENSE"]
authors = [{name = "Seokhoon Joo", email = "seokhoonj@gmail.com"}]
requires-python = ">=3.10"
keywords = [
  "actuarial",
  "insurance",
  "loss ratio",
  "chain ladder",
  "reserving",
  "health insurance",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "polars>=1.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
pandas = [
  "pandas>=2.0",
  "pyarrow>=10",
]
dev = [
  "build>=1.0",
  "mypy>=1.8",
  "pandas>=2.0",
  "pyarrow>=10",
  "pytest>=7.0",
  "ruff>=0.4",
  "twine>=5.0",
]
docs = [
  "sphinx>=7.0",
  "pydata-sphinx-theme",
  "myst-parser>=2.0",
  "sphinx-design",
  "sphinx-copybutton",
  "sphinxcontrib-mermaid",
]

[project.urls]
Homepage = "https://seokhoonj.github.io/lossratio/"
Source = "https://github.com/seokhoonj/lossratio"
"R package" = "https://github.com/seokhoonj/lossratio-r"
Issues = "https://github.com/seokhoonj/lossratio/issues"

[tool.hatch.build]
exclude = [
  "CLAUDE.md",
  ".claude/",
  ".github/",
  "tests/",
  "dev/",
  ".venv/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lossratio"]

[tool.hatch.build.targets.sdist]
include = [
  "src/lossratio",
  "pyproject.toml",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
# N803/N806/N817: uppercase math symbols (matrices, credibility Z, design X)
# are idiomatic in the actuarial kernels and mandated by the naming convention.
ignore = ["N803", "N806", "N817"]

[tool.mypy]
# Analyse under 3.12 so modern third-party stubs (numpy, sphinx via
# matplotlib.sphinxext) parse -- their .pyi files use 3.12-only `type`
# statements that mypy rejects as a syntax error under an older target. Our own
# 3.10 floor is enforced separately (ruff `UP` + target-version, CI test matrix
# on 3.10-3.12), so targeting 3.12 here costs no 3.10 coverage.
python_version = "3.12"
files = ["src/lossratio"]
# Third-party numeric/plotting libs ship partial or no type information;
# checking our own code against their public API is enough without their
# internals being fully typed.
ignore_missing_imports = true
